Tela mapa + login

--- a/aplicativoTourGemeas/app/src/main/AndroidManifest.xml
+++ b/aplicativoTourGemeas/app/src/main/AndroidManifest.xml
@@ -15,15 +15,24 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AplicativoTourGemeas"
         tools:targetApi="31">
-
-        <activity android:name=".LoginActivity"
+        <activity
+            android:name=".TelaEnigmas"
+            android:exported="false" />
+        <activity
+            android:name=".TelaPerfil"
+            android:exported="false" />
+        <activity
+            android:name=".TelaMapa"
+            android:exported="false" />
+        <activity
+            android:name=".LoginActivity"
             android:exported="true">
             <intent-filter>
-                <action android:name="android.intent.action.LOGIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <action android:name="android.intent.action.LOGIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".MainActivity"
             android:exported="true" />
