--- a/GemeasBackend/sample.env
+++ b/GemeasBackend/sample.env
@@ -4,3 +4,6 @@ PG_USERNAME = # ex pguser
 PG_PASSWORD = # ex pgpassword
 PG_DATABASE = # ex gemeas
 PG_SCHEMA = # ex tour
+
+JWT_SECRET=UmaBaitaSenha
+JWT_DURATION_SECONDS=3600000
