--- a/tourApp/tour-cidades-gemeas/app/src/main/AndroidManifest.xml
+++ b/tourApp/tour-cidades-gemeas/app/src/main/AndroidManifest.xml
@@ -34,7 +34,7 @@
             android:exported="false" />
         -->
         <activity
-            android:name=".CriarContaActivity"
+            android:name=".TelaPrincipalActivity"
             android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
