--- a/tourApp/tour-cidades-gemeas/app/src/main/AndroidManifest.xml
+++ b/tourApp/tour-cidades-gemeas/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <application
         android:allowBackup="true"
@@ -11,31 +11,34 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TourGemeas"
-        tools:targetApi="31" >
+        tools:targetApi="31">
 
-        <!--
-         <activity
-            android:name=".CuidadoActivity"
-            android:exported="false" />
+        <!--  <activity
+              android:name=".EnigmaActivity"
+              android:exported="false" />
+
+           <activity
+              android:name=".CuidadoActivity"
+              android:exported="false" />
+          <activity
+              android:name=".CriarContaActivity"
+              android:exported="false" />
+          <activity
+              android:name=".IniciarSessaoActivity"
+              android:exported="false" />
+          <activity
+              android:name=".LoguinActivity"
+              android:exported="false" />
+          <activity
+              android:name=".MainActivity"
+              android:exported="false" />
+          <activity
+              android:name=".TelaPrincipalActivity"
+              android:exported="false" />
+          -->
         <activity
-            android:name=".CriarContaActivity"
-            android:exported="false" />
-        <activity
-            android:name=".IniciarSessaoActivity"
-            android:exported="false" />
-        <activity
-            android:name=".LoguinActivity"
-            android:exported="false" />
-        <activity
-            android:name=".MainActivity"
-            android:exported="false" />
-        <activity
-            android:name=".TelaPrincipalActivity"
-            android:exported="false" />
-        -->
-        <activity
-            android:name=".TelaPrincipalActivity"
-            android:exported="true" >
+            android:name=".EnigmaActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
