--- a/tourApp/tour-cidades-gemeas/app/src/main/AndroidManifest.xml
+++ b/tourApp/tour-cidades-gemeas/app/src/main/AndroidManifest.xml
@@ -12,32 +12,49 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TourGemeas"
         tools:targetApi="31">
+        <!-- <activity
+           android:name=".EnigmaDetalhadoActivity"
+           android:exported="false" />
 
-        <!--  <activity
-              android:name=".EnigmaActivity"
-              android:exported="false" />
+       <activity
+           android:name=".DicasEnigmasActivity"
+           android:exported="false" />
 
-           <activity
-              android:name=".CuidadoActivity"
-              android:exported="false" />
-          <activity
-              android:name=".CriarContaActivity"
-              android:exported="false" />
-          <activity
-              android:name=".IniciarSessaoActivity"
-              android:exported="false" />
-          <activity
-              android:name=".LoguinActivity"
-              android:exported="false" />
-          <activity
-              android:name=".MainActivity"
-              android:exported="false" />
-          <activity
-              android:name=".TelaPrincipalActivity"
-              android:exported="false" />
-          -->
+       <activity
+           android:name=".EnigmaDicasActivity"
+           android:exported="false" />
+
+       <activity
+           android:name=".EnigmaActivity"
+           android:exported="false" />
+
+       <activity
+           android:name=".CuidadoActivity"
+           android:exported="false" />
+
+       <activity
+           android:name=".CriarContaActivity"
+           android:exported="false" />
+
+       <activity
+           android:name=".IniciarSessaoActivity"
+           android:exported="false" />
+
+       <activity
+           android:name=".LoguinActivity"
+           android:exported="false" />
+
+       <activity
+           android:name=".MainActivity"
+           android:exported="false" />
+
+       <activity
+           android:name=".TelaPrincipalActivity"
+           android:exported="false" />
+       -->
+
         <activity
-            android:name=".EnigmaActivity"
+            android:name=".EnigmaDetalhadoActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
