--- a/tourApp/tour-cidades-gemeas/app/src/main/AndroidManifest.xml
+++ b/tourApp/tour-cidades-gemeas/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.TourGemeas"
         tools:targetApi="31">
         <!-- <activity
-           android:name=".EnigmaDetalhadoActivity"
+           android:name=".MainActivity"
            android:exported="false" />
 
        <activity
@@ -52,9 +52,9 @@
            android:name=".TelaPrincipalActivity"
            android:exported="false" />
        -->
-
+        <activity android:name=".LoguinActivity" />
         <activity
-            android:name=".EnigmaDetalhadoActivity"
+            android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
