--- a/tourApp/tour-cidades-gemeas/app/src/main/AndroidManifest.xml
+++ b/tourApp/tour-cidades-gemeas/app/src/main/AndroidManifest.xml
@@ -53,6 +53,9 @@
            android:exported="false" />
        -->
         <activity android:name=".LoguinActivity" />
+        <activity android:name=".IniciarSessaoActivity"/>
+        <activity android:name=".TelaPrincipalActivity"/>
+
         <activity
             android:name=".MainActivity"
             android:exported="true">
