--- a/tourApp/tour-cidades-gemeas/app/src/main/AndroidManifest.xml
+++ b/tourApp/tour-cidades-gemeas/app/src/main/AndroidManifest.xml
@@ -17,21 +17,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TourGemeas"
         tools:targetApi="31">
-        <!-- <activity
-           android:name=".MainActivity"
-           android:exported="false" />
 
-       <activity
-           android:name=".DicasEnigmasActivity"
-           android:exported="false" />
 
-       <activity
-           android:name=".EnigmaDicasActivity"
-           android:exported="false" />
-
-       <activity
-           android:name=".EnigmaActivity"
-           android:exported="false" />
 
        <activity
            android:name=".CuidadoActivity"
@@ -41,26 +28,15 @@
            android:name=".CriarContaActivity"
            android:exported="false" />
 
-       <activity
-           android:name=".IniciarSessaoActivity"
-           android:exported="false" />
 
-       <activity
-           android:name=".LoguinActivity"
-           android:exported="false" />
 
-       <activity
-           android:name=".MainActivity"
-           android:exported="false" />
-
-       <activity
-           android:name=".TelaPrincipalActivity"
-           android:exported="false" />
        -->
         <activity android:name=".LoguinActivity" />
         <activity android:name=".IniciarSessaoActivity"/>
         <activity android:name=".TelaPrincipalActivity"/>
         <activity android:name=".EnigmaActivity" />
+        <activity android:name=".DicasEnigmasActivity" />
+        <activity android:name=".EnigmaDetalhadoActivity" />
 
 
 
