--- a/tourApp/tour-cidades-gemeas/app/src/main/AndroidManifest.xml
+++ b/tourApp/tour-cidades-gemeas/app/src/main/AndroidManifest.xml
@@ -25,9 +25,7 @@
            android:name=".DicasEnigmasActivity"
            android:exported="false" />
 
-       <activity
-           android:name=".EnigmaDicasActivity"
-           android:exported="false" />
+
 
        <activity
            android:name=".EnigmaActivity"
@@ -61,6 +59,9 @@
         <activity android:name=".IniciarSessaoActivity"/>
         <activity android:name=".TelaPrincipalActivity"/>
         <activity android:name=".EnigmaActivity" />
+        <activity android:name=".CriarContaActivity" />
+        <activity android:name=".DicasEnigmasActivity" />
+        <activity android:name=".EnigmaDetalhadoActivity" />
 
 
 
