--- a/tourApp/tour-cidades-gemeas/app/src/main/AndroidManifest.xml
+++ b/tourApp/tour-cidades-gemeas/app/src/main/AndroidManifest.xml
@@ -23,6 +23,9 @@
        <activity
            android:name=".CuidadoActivity"
            android:exported="false" />
+       <activity
+            android:name=".TelaAdminActivity"
+            android:exported="false" />
         -->
         <activity android:name=".LoguinActivity" />
         <activity android:name=".IniciarSessaoActivity" />
@@ -32,7 +35,6 @@
         <activity android:name=".EnigmaDetalhadoActivity" />
         <activity android:name=".CriarContaActivity" />
         <activity android:name=".PerfilActivity" />
-
         <activity
             android:name=".MainActivity"
             android:exported="true">
