--- a/TourGemeasBackEnd/sample.env
+++ b/TourGemeasBackEnd/sample.env
@@ -6,3 +6,6 @@ DATABASE_USERNAME = # ex postgres
 DATABASE_PASSWORD = # ex postgres
 DATABASE_NAME = # ex db
 DATABASE_SCHEMA = # ex public
+
+JWT_SECRET = # ex asjashauhshuasuhda
+JWT_DURATION_SECONDS = # ex 86400
