--- a/TourGemeasBackEnd/src/main/resources/application.properties
+++ b/TourGemeasBackEnd/src/main/resources/application.properties
@@ -18,3 +18,6 @@ spring.jpa.properties.hibernate.format_sql=true
 
 spring.datasource.hikari.maximum-pool-size=10
 spring.datasource.hikari.minimum-idle=5
+
+security.jwt.secret=${JWT_SECRET}
+security.jwt.duration-seconds=${JWT_DURATION_SECONDS}
