--- a/TourGemeasBackEnd/src/main/resources/application.properties
+++ b/TourGemeasBackEnd/src/main/resources/application.properties
@@ -1,13 +1,10 @@
 spring.application.name=TourGemeas
 
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://${DATABASE_HOST}:${DATABASE_PORT}/${DATABASE_NAME}
-spring.datasource.username=${DATABASE_USERNAME}
-spring.datasource.password=${DATABASE_PASSWORD}
+spring.datasource.url=jdbc:postgresql://ep-rough-leaf-ac2yr7fq-pooler.sa-east-1.aws.neon.tech/tour?user=neondb_owner&password=npg_Uz3dB4GKDsMi&sslmode=require
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.properties.hibernate.default_schema=${DATABASE_SCHEMA}
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.default_schema=${DATABASE_SCHEMA:public}
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
@@ -15,5 +12,5 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.datasource.hikari.maximum-pool-size=10
 spring.datasource.hikari.minimum-idle=5
 
-security.jwt.secret=${JWT_SECRET}
-security.jwt.duration-seconds=${JWT_DURATION_SECONDS}
+security.jwt.secret=${JWT_SECRET:default_secret}
+security.jwt.duration-seconds=${JWT_DURATION_SECONDS:86400}
