--- a/TourGemeasBackEnd/src/main/resources/application.properties
+++ b/TourGemeasBackEnd/src/main/resources/application.properties
@@ -4,8 +4,8 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://ep-rough-leaf-ac2yr7fq-pooler.sa-east-1.aws.neon.tech/tour?user=neondb_owner&password=npg_Uz3dB4GKDsMi&sslmode=require
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.properties.hibernate.default_schema=${DATABASE_SCHEMA:public}
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.properties.hibernate.default_schema=${DATABASE_SCHEMA:tour}
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
