--- a/TourGemeasBackEnd/src/main/resources/application.properties
+++ b/TourGemeasBackEnd/src/main/resources/application.properties
@@ -14,3 +14,8 @@ spring.datasource.hikari.minimum-idle=5
 
 security.jwt.secret=${JWT_SECRET:default_secret}
 security.jwt.duration-seconds=${JWT_DURATION_SECONDS:86400}
+
+# Configurações de Logging
+logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.security=DEBUG
+logging.level.edu.uniuv.grupo2.tourgemeas=DEBUG
