--- a/tourApp/tour-cidades-gemeas/app/src/main/AndroidManifest.xml
+++ b/tourApp/tour-cidades-gemeas/app/src/main/AndroidManifest.xml
@@ -35,6 +35,7 @@
         <activity android:name=".EnigmaDetalhadoActivity" />
         <activity android:name=".CriarContaActivity" />
         <activity android:name=".PerfilActivity" />
+        <activity  android:name=".TelaAdminActivity" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
